// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fix fontSmoothing 1`] = `
Object {
  "component": <div
    className="a b c d e f g h i j k l m"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{background-color:black}
    .e{color:blue}
    .f{white-space:pre-wrap}
    .g{overflow-wrap:break-word}
    .h{-ms-hyphens:auto}
    .i{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .j{font-size:16}
    .k{line-height:24px}
    .l{-moz-osx-font-smoothing:grayscale}
    .m{-webkit-font-smoothing:antialiased}",
}
`;

exports[`fix fontSmoothing 2`] = `
Object {
  "component": <div
    className="a b c d e f g h i j k"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{background-color:white}
    .e{color:blue}
    .f{white-space:pre-wrap}
    .g{overflow-wrap:break-word}
    .h{-ms-hyphens:auto}
    .i{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .j{font-size:16}
    .k{line-height:24px}",
}
`;

exports[`fix fontSmoothing 3`] = `
Object {
  "component": <div
    className="a b c d e f g h i j"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:blue}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:16}
    .j{line-height:24px}",
}
`;

exports[`lineHeight ensures vertical rhythm 1`] = `
Object {
  "component": <div
    className="a b c d e f g h i j"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:24}
    .j{line-height:24px}",
}
`;

exports[`lineHeight ensures vertical rhythm 2`] = `
Object {
  "component": <div
    className="a b c d e f g h i j"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:26}
    .j{line-height:48px}",
}
`;

exports[`lineHeight ensures vertical rhythm 3`] = `
Object {
  "component": <div
    className="a b c d e f g h i j"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:48}
    .j{line-height:48px}",
}
`;

exports[`lineHeight ensures vertical rhythm 4`] = `
Object {
  "component": <div
    className="a b c d e f g h i j"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:50}
    .j{line-height:72px}",
}
`;

exports[`props 1`] = `
Object {
  "component": <div
    className="a b c d e f g h i j k"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:16}
    .j{line-height:24px}
    .k{text-align:left}",
}
`;

exports[`props 2`] = `
Object {
  "component": <div
    className="a b c d e f g h i j k"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:16}
    .j{line-height:24px}
    .k{font-weight:600}",
}
`;

exports[`props 3`] = `
Object {
  "component": <div
    className="a b c d e f g h i j"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:blue}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:16}
    .j{line-height:24px}",
}
`;

exports[`props 4`] = `
Object {
  "component": <div
    className="a b c d e f g h i j k"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:16}
    .j{line-height:24px}
    .k{text-decoration:underline}",
}
`;

exports[`props 5`] = `
Object {
  "component": <div
    className="a b c d e f g h i j"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:arial}
    .i{font-size:16}
    .j{line-height:24px}",
}
`;

exports[`props 6`] = `
Object {
  "component": <div
    className="a b c d e f g h i j k"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:16}
    .j{line-height:24px}
    .k{font-style:italic}",
}
`;

exports[`props 7`] = `
Object {
  "component": <div
    className="a b c d e f g h i j"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:16}
    .j{line-height:10px}",
}
`;

exports[`props 8`] = `
Object {
  "component": <div
    className="a b c d e f g h i j"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:18}
    .j{line-height:24px}",
}
`;

exports[`text without props 1`] = `
Object {
  "component": <div
    className="a b c d e f g h i j"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:16}
    .j{line-height:24px}",
}
`;
